Changed profile pic size on small screens. Fixed sizing bug on small screens.

--- a/smartAdmin/LESS_FILES/custom.less
+++ b/smartAdmin/LESS_FILES/custom.less
@@ -347,10 +347,28 @@ h2 {
 
 .row {
   padding: 0;
-  
+  margin: 0;
+}
+
+.img-size {
+  height: 100px;
+  width: 100px;
+}
+
+.header-txt-size {
+  font-size: 1.5em;
 }
 
 @media (min-width: 768px) {
+  .header-txt-size {
+    font-size: 3em;
+  }
+
+  .img-size {
+    height: 315px;
+    width: 315px;
+  }
+
   .map-padding {
     padding-top: 50px;
   }
